feat: 공통 코드에 mapstruct 적용